# Paracord

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.client-deb  Dockerfile.linux-build  README.md  RELEASE_NOTES.md  design_mockup.html  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml  release.yml  security-dast-fuzz.yml
client/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  ui_dump.html  ui_mock_dump.html  vite.config.ts
client/src/: App.tsx  main.tsx
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: audio_capture.rs  commands.rs  lib.rs  main.rs
client/src-tauri/src/native_media/: audio_pipeline.rs  commands.rs  events.rs  file_transfer.rs  mod.rs  session.rs  video_pipeline.rs
client/src/api/: admin.ts  auth.ts  channels.ts  client.ts  dms.ts  files.ts  guildStorage.ts  guilds.ts  invites.ts  relationships.ts  voice.ts
client/src/components/: ErrorBoundary.tsx  RestartBanner.tsx  UpdateNotification.tsx
client/src/components/customization/: CustomCSS.tsx  ThemeSelector.tsx
client/src/components/file/: FilePreview.tsx  FileUpload.tsx
client/src/components/guild/: CreateGuildModal.tsx  FileStorageSection.tsx  GuildSettings.tsx  InviteModal.tsx  ServerHubSettings.tsx
client/src/gateway/: connection.ts  events.ts
client/src/hooks/: useActivityPresence.ts  useFileUpload.ts  useGateway.ts  useMediaDevices.ts  useMessages.ts  usePermissions.ts  useStream.ts  useTheme.ts  useTyping.ts  useVoice.ts  useVoiceKeybinds.ts
client/src/lib/: AppProviders.tsx  activityPresence.ts  apiBaseUrl.ts  authToken.ts  avatars.ts  colors.ts  connectionManager.ts  constants.ts  desktopDiagnostics.ts  formatters.ts  markdown.ts  security.ts  tauriEnv.ts
client/src/pages/: AccountSetupPage.tsx  AdminPage.tsx  AppLayout.tsx  DMPage.tsx  FriendsPage.tsx  GuildHub.tsx  GuildPage.tsx  GuildSettingsPage.tsx  HomePage.tsx  InvitePage.tsx  LoginPage.tsx  MediaTest.tsx  PrivacyPage.tsx  RegisterPage.tsx  ServerConnectPage.tsx  SettingsPage.tsx  TermsPage.tsx
client/src/stores/: authStore.test.ts  authStore.ts  channelStore.ts  guildStore.ts  memberStore.ts  messageStore.test.ts  messageStore.ts  presenceStore.ts  relationshipStore.ts  typingStore.ts  uiStore.ts  voiceStore.ts
client/src/styles/: globals.css
client/src/types/: index.ts
config/: livekit.yaml  paracord.example.toml
crates/paracord-api/: Cargo.toml
crates/paracord-api/src/: error.rs  lib.rs  middleware.rs
crates/paracord-api/src/routes/: admin.rs  audit.rs  audit_logs.rs  auth.rs  bans.rs  bots.rs  channels.rs  commands.rs  dms.rs  federation.rs  files.rs  guilds.rs  interactions.rs  invites.rs  livekit_proxy.rs  members.rs  mod.rs  realtime.rs  relationships.rs  roles.rs  users.rs  voice.rs  voice_v2.rs
crates/paracord-api/tests/: bot_system_routes.rs  channel_message_routes.rs  rate_limit_regressions.rs  security_federation_regressions.rs  voice_routes.rs
crates/paracord-codec/: Cargo.toml
crates/paracord-codec/src/: crypto.rs  lib.rs
crates/paracord-codec/src/audio/: capture.rs  jitter.rs  noise.rs  opus.rs  playback.rs
crates/paracord-codec/src/video/: decoder.rs  encoder.rs  mod.rs
crates/paracord-core/: Cargo.toml
crates/paracord-core/src/: admin.rs  auth.rs  backup.rs  channel.rs  error.rs  events.rs  guild.rs  interactions.rs  lib.rs  member_index.rs  message.rs  permissions.rs  user.rs
crates/paracord-db/: Cargo.toml
crates/paracord-db/migrations/: 20260209000001_initial_schema.sql  20260210000001_server_settings.sql  20260213000002_channel_required_roles.sql  20260221000003_federation_file_cache.sql  20260221000004_storage_settings_seed.sql  20260222000001_hub_settings.sql
crates/paracord-db/migrations_pg/: 20260219000002_messages_nonce_dedup.sql  20260221000001_guild_storage_policies.sql  20260221000002_attachment_content_hash.sql  20260221000003_federation_file_cache.sql  20260221000004_storage_settings_seed.sql
crates/paracord-db/src/: application_commands.rs  attachments.rs  audit_log.rs  bans.rs  bot_applications.rs  channel_overwrites.rs  channels.rs  dms.rs  emojis.rs  federation.rs  federation_file_cache.rs  guild_storage_policies.rs  guilds.rs  interaction_tokens.rs  invites.rs  lib.rs  members.rs  messages.rs  polls.rs  reactions.rs  read_states.rs  relationships.rs  roles.rs  scheduled_events.rs  server_settings.rs  users.rs  voice_states.rs
crates/paracord-federation/: Cargo.toml
crates/paracord-federation/src/: client.rs  lib.rs
crates/paracord-media/: Cargo.toml
crates/paracord-media-dev/: Cargo.toml
crates/paracord-media-dev/src/: main.rs
crates/paracord-media/src/: lib.rs  livekit.rs  storage.rs  streaming.rs  voice.rs
crates/paracord-models/: Cargo.toml
crates/paracord-models/src/: attachment.rs  audit_log.rs  ban.rs  channel.rs  embed.rs  emoji.rs  gateway.rs  guild.rs  invite.rs  lib.rs  member.rs  message.rs  permissions.rs  presence.rs  role.rs  user.rs  voice.rs
crates/paracord-relay/: Cargo.toml
crates/paracord-relay/src/: bandwidth.rs  e2ee.rs  federation.rs  lib.rs  p2p.rs  participant.rs  relay.rs  room.rs  signaling.rs  speaker.rs
crates/paracord-server/: Cargo.toml
crates/paracord-server/src/: bots.rs  cli.rs  config.rs  embedded_ui.rs  livekit_proc.rs  main.rs  upnp.rs
crates/paracord-transport/: Cargo.toml
crates/paracord-transport/src/: connection.rs  control.rs  endpoint.rs  federation.rs  file_transfer.rs  lib.rs  protocol.rs  webtransport.rs
crates/paracord-util/: Cargo.toml
crates/paracord-util/src/: lib.rs  pagination.rs  snowflake.rs  validation.rs
crates/paracord-ws/: Cargo.toml
crates/paracord-ws/src/: handler.rs  lib.rs  session.rs
docs/: api-contracts.md  deployment-profiles.md  federation-protocol.md  launch-checklist.md
installer/: paracord-client.iss
scripts/: backup-db.sh  federation_e2e_validation.py  federation_live_fundamentals_validation.py  restore-db.sh  security_gate_check.py  setup.sh
(+34 files in other folders)
