[workspace]
resolver = "2"
members = [
    "crates/paracord-server",
    "crates/paracord-api",
    "crates/paracord-ws",
    "crates/paracord-core",
    "crates/paracord-db",
    "crates/paracord-federation",
    "crates/paracord-models",
    "crates/paracord-media",
    "crates/paracord-util",
]
exclude = [
    "client/src-tauri",
]

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.88"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any", "chrono", "json", "derive", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# IDs & permissions
bitflags = "2"
uuid = { version = "1", features = ["v4", "serde"] }

# Crypto
rand = "0.8"
ed25519-dalek = { version = "2", features = ["serde"] }
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
hkdf = "0.12"

# Concurrent collections
dashmap = "6"

# Rate limiting
governor = "0.10"

# Caching
moka = { version = "0.12", features = ["future"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Networking
igd-next = { version = "0.15", features = ["aio_tokio"] }
crab_nat = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio-tungstenite = "0.28"

# Process management
which = "7"
tempfile = "3"

# TLS
rcgen = "0.13"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

# Embedded web UI
rust-embed = "8"
mime_guess = "2"

# Workspace crates
paracord-api = { path = "crates/paracord-api" }
paracord-ws = { path = "crates/paracord-ws" }
paracord-core = { path = "crates/paracord-core" }
paracord-db = { path = "crates/paracord-db" }
paracord-federation = { path = "crates/paracord-federation" }
paracord-models = { path = "crates/paracord-models" }
paracord-media = { path = "crates/paracord-media" }
paracord-util = { path = "crates/paracord-util" }
