[package]
name = "paracord-desktop"
version = "0.2.0"
edition = "2021"
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
wasapi = "0.22"
webview2-com = "0.38"
windows-core = "0.61"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
