[package]
name = "paracord-desktop"
version = "0.2.2"
edition = "2021"
rust-version = "1.85"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
wasapi = "0.22"
webview2-com = "0.38"
windows-core = "0.61"
windows = { version = "0.61", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
libpulse-binding = "2"
libpulse-simple-binding = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
