[package]
name = "paracord-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# Native QUIC media engine
paracord-transport = { workspace = true }
paracord-codec = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
url = "2"

[target.'cfg(windows)'.dependencies]
wasapi = "0.22"
webview2-com = "0.38"
windows-core = "0.61"
windows = { version = "0.61", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
libpulse-binding = "2"
libpulse-simple-binding = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
vpx = ["paracord-codec/vpx"]
