[package]
name = "paracord-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
paracord-models = { workspace = true }
paracord-db = { workspace = true }
paracord-util = { workspace = true }
paracord-media = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
