[package]
name = "paracord-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
paracord-models = { workspace = true }
paracord-db = { workspace = true }
paracord-util = { workspace = true }
paracord-media = { workspace = true }
paracord-federation = { workspace = true }
paracord-relay = { path = "../paracord-relay" }
paracord-transport = { path = "../paracord-transport" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
moka = { workspace = true }
dashmap = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
flate2 = "1"
tar = "0.4"
tempfile = { workspace = true }
