[package]
name = "paracord-models"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
bitflags = { workspace = true }
sqlx = { workspace = true }
