[package]
name = "paracord-relay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Workspace crates
paracord-transport = { path = "../paracord-transport" }
paracord-models = { workspace = true }

# QUIC (for ConnectionHandle wrapping quinn::Connection)
quinn = { workspace = true }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Concurrent collections
dashmap = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Bytes
bytes = "1"
