[package]
name = "paracord-ws"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
paracord-core = { workspace = true }
paracord-models = { workspace = true }
paracord-db = { workspace = true }
paracord-relay = { path = "../paracord-relay" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures-util = "0.3"
moka = { workspace = true }
dashmap = { workspace = true }
governor = { workspace = true }
flate2 = "1"
